# try-qt5

./: CMakeLists.txt  main.cpp
